force-app/main/default/objects/MLC_Asset__c/MLC_Asset__c.object-meta.xml
<!-- Placeholder: Retrieve full metadata using: sf project retrieve start --metadata CustomObject:MLC_Asset__c -->
<!-- Custom object: MLC Asset — fully custom, retrieve from source org before deployment -->
<CustomObject>
    <label>MLC Asset</label>
    <pluralLabel>MLC Assets</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>MLC Asset Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>