force-app/main/default/objects/MLC_Asset__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Text</type>
    <length>1300</length>
    <formula>HYPERLINK("https://na35.salesforce.com/" &amp; contact__r.AccountId, contact__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>