force-app/main/default/objects/MLC_Asset__c/fields/Account_lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_lookup__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_lookup__r</relationshipName>
</CustomField>