force-app/main/default/objects/MLC_Asset__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <label>Assigned User</label>
    <type>Lookup</type>
    <inlineHelpText>The Internal user assigned to the asset who is responsible for following up on the asset. This is typically the BDA.</inlineHelpText>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_User__r</relationshipName>
</CustomField>