force-app/main/default/objects/MLC_Asset__c/fields/BDA_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>BDA_Task_Created__c</fullName>
    <label>BDA Task Created?</label>
    <type>Checkbox</type>
    <inlineHelpText>Used to prevent duplicate tasks from being created by the workflow "MLC Assign Task to BDA on Asset Creation"</inlineHelpText>
</CustomField>