force-app/main/default/objects/MLC_Asset__c/fields/campaign__c.field-meta.xml
<CustomField>
    <fullName>campaign__c</fullName>
    <label>Campaign</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>campaign__r</relationshipName>
</CustomField>