force-app/main/default/objects/MLC_Asset__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Fedex</fullName><default>true</default><label>Fedex</label><isActive>true</isActive></value>
            <value><fullName>UPS</fullName><default>false</default><label>UPS</label><isActive>true</isActive></value>
            <value><fullName>USPS</fullName><default>false</default><label>USPS</label><isActive>true</isActive></value>
            <value><fullName>DHL</fullName><default>false</default><label>DHL</label><isActive>true</isActive></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>