force-app/main/default/objects/MLC_Asset__c/fields/Collateral_URL__c.field-meta.xml
<CustomField>
    <fullName>Collateral_URL__c</fullName>
    <label>Collateral URL</label>
    <type>Url</type>
</CustomField>