force-app/main/default/objects/MLC_Asset__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Contact</referenceTo>
    <relationshipName>contact__r</relationshipName>
</CustomField>