force-app/main/default/objects/MLC_Asset__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
    <inlineHelpText>The expected date of delivery of the tablet to the prospect.</inlineHelpText>
</CustomField>