force-app/main/default/objects/MLC_Asset__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Text</type>
    <inlineHelpText>The Manufacturer of the Tablet.</inlineHelpText>
    <length>50</length>
</CustomField>