force-app/main/default/objects/MLC_Asset__c/fields/Nuture_Tier__c.field-meta.xml
<CustomField>
    <fullName>Nuture_Tier__c</fullName>
    <label>Nuture Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>N/A</fullName><default>false</default><label>N/A</label><isActive>true</isActive></value>
            <value><fullName>1</fullName><default>false</default><label>1</label><isActive>true</isActive></value>
            <value><fullName>3</fullName><default>false</default><label>3</label><isActive>true</isActive></value>
            <value><fullName>5</fullName><default>false</default><label>5</label><isActive>true</isActive></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>