force-app/main/default/objects/MLC_Asset__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>opportunity__r</relationshipName>
</CustomField>