force-app/main/default/objects/MLC_Asset__c/fields/Packaging_Cost__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Cost__c</fullName>
    <label>Packaging Cost</label>
    <type>Currency</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>