force-app/main/default/objects/MLC_Asset__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <label>Partner Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Partner_Contact__r</relationshipName>
</CustomField>