force-app/main/default/objects/MLC_Asset__c/fields/Personalized_Gift_Details__c.field-meta.xml
<CustomField>
    <fullName>Personalized_Gift_Details__c</fullName>
    <label>Personalized Gift Details</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>