force-app/main/default/objects/MLC_Asset__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <type>Currency</type>
    <precision>7</precision>
    <scale>2</scale>
</CustomField>