force-app/main/default/objects/MLC_Asset__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>product__r</relationshipName>
</CustomField>