force-app/main/default/objects/MLC_Asset__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>