force-app/main/default/objects/MLC_Asset__c/fields/Returned_Asset_Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Returned_Asset_Shipping_Cost__c</fullName>
    <label>Returned Asset Shipping Cost</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>IF( TEXT(Status__c) == "Returned", Shipping_Cost__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>