force-app/main/default/objects/MLC_Asset__c/fields/Script_Text__c.field-meta.xml
<CustomField>
    <fullName>Script_Text__c</fullName>
    <label>Script Text</label>
    <type>LongTextArea</type>
    <inlineHelpText>The text of the script that is used to create the video.</inlineHelpText>
    <length>5000</length>
</CustomField>