force-app/main/default/objects/MLC_Asset__c/fields/Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost__c</fullName>
    <label>Shipping Cost</label>
    <type>Currency</type>
    <precision>7</precision>
    <scale>2</scale>
</CustomField>