force-app/main/default/objects/MLC_Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Shipped</fullName><default>true</default><label>Shipped</label><isActive>true</isActive></value>
            <value><fullName>Received</fullName><default>false</default><label>Received</label><isActive>true</isActive></value>
            <value><fullName>Returned</fullName><default>false</default><label>Returned</label><isActive>true</isActive></value>
            <value><fullName>Undeliverable</fullName><default>false</default><label>Undeliverable</label><isActive>true</isActive></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>