force-app/main/default/objects/MLC_Asset__c/fields/Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID__c</fullName>
    <label>Tracking ID</label>
    <type>Text</type>
    <length>50</length>
</CustomField>