force-app/main/default/objects/MLC_Asset__c/fields/Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Video_Link__c</fullName>
    <label>Video Link</label>
    <type>Url</type>
</CustomField>